# format_filename_dates

./: LICENSE  README.md  pyproject.toml
src/format_filename_dates/: __init__.py  __main__.py
